package edu.pmdm.listascompra.ui.crear_producto;

import androidx.lifecycle.ViewModel;

public class CrearProductoViewModel extends ViewModel {

}